# ledger-core

./: .gitignore  API_CURL_COMMANDS.md  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  indo.txt  info.txt  ledger_core_postman_collection.json
Project-Roadmap/: docker-compose1.yml
Project-Roadmap/Devlopment-Roadmap/: Dev-roadmap.txt  db-testing.txt
Project-Roadmap/Diesel-ORM-Deep-Dive/: diesel.txt
Project-Roadmap/Requirements_analysis/: Data_Flow_for_a_Transaction.txt  Non-Functional_Requirements.txt  Requirement_Analysis.txt  System_Architecture_Diagram.txt
Project-Roadmap/md-files/: ADMIN_BOOTSTRAP.md  API_CURL_COMMANDS.md  DATABASE_RESET_GUIDE.md  LOGGING.md  RBAC_IMPLEMENTATION_PLAN.md  testing-integration-guide.md  walkthrough.md.resolved
migrations/2025-12-26-120001_create_accounts/: down.sql  up.sql
migrations/2025-12-26-120002_create_api_keys/: down.sql  up.sql
migrations/2025-12-26-120003_create_transactions/: down.sql  up.sql
migrations/2025-12-26-120004_create_webhook_endpoints/: down.sql  up.sql
migrations/2025-12-26-120005_create_webhook_events/: down.sql  up.sql
migrations/2025-12-26-124704_create_create_idempotency_cache/: up.sql
migrations/2026-01-01-055030-0000_add_role_to_api_keys/: down.sql  up.sql
migrations/2026-01-01-062153-0000_make_account_id_nullable_in_api_keys/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs
src/handlers/: account_handlers.rs  api_key_handlers.rs  health.rs  mod.rs  transaction_handlers.rs  webhook_handlers.rs
tests/: README.md  transaction_tests.rs
(+29 files in other folders)
